{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 20,
  "lineage": "4fac1504-8f32-143f-5a1c-4c33001259d5",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/213609f3-cd71-4b46-b652-2b8c1cbee26f/resourceGroups/rg-devsecops-laravel/providers/Microsoft.Network/networkInterfaces/nic-devsecops",
            "internal_domain_name_suffix": "llpvt2ujcuduxdamw0za0o0c0f.gvxx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/213609f3-cd71-4b46-b652-2b8c1cbee26f/resourceGroups/rg-devsecops-laravel/providers/Microsoft.Network/publicIPAddresses/pip-devsecops",
                "subnet_id": "/subscriptions/213609f3-cd71-4b46-b652-2b8c1cbee26f/resourceGroups/rg-devsecops-laravel/providers/Microsoft.Network/virtualNetworks/vnet-devsecops/subnets/subnet-devsecops"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "swedencentral",
            "name": "nic-devsecops",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg-devsecops-laravel"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "nic-devsecops",
            "resource_group_name": "rg-devsecops-laravel",
            "subscription_id": "213609f3-cd71-4b46-b652-2b8c1cbee26f"
          },
          "dependencies": [
            "azurerm_public_ip.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/213609f3-cd71-4b46-b652-2b8c1cbee26f/resourceGroups/rg-devsecops-laravel/providers/Microsoft.Network/networkInterfaces/nic-devsecops|/subscriptions/213609f3-cd71-4b46-b652-2b8c1cbee26f/resourceGroups/rg-devsecops-laravel/providers/Microsoft.Network/networkSecurityGroups/nsg-devsecops",
            "network_interface_id": "/subscriptions/213609f3-cd71-4b46-b652-2b8c1cbee26f/resourceGroups/rg-devsecops-laravel/providers/Microsoft.Network/networkInterfaces/nic-devsecops",
            "network_security_group_id": "/subscriptions/213609f3-cd71-4b46-b652-2b8c1cbee26f/resourceGroups/rg-devsecops-laravel/providers/Microsoft.Network/networkSecurityGroups/nsg-devsecops"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.main",
            "azurerm_network_security_group.main",
            "azurerm_public_ip.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/213609f3-cd71-4b46-b652-2b8c1cbee26f/resourceGroups/rg-devsecops-laravel/providers/Microsoft.Network/networkSecurityGroups/nsg-devsecops",
            "location": "swedencentral",
            "name": "nsg-devsecops",
            "resource_group_name": "rg-devsecops-laravel",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTPS",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-devsecops",
            "resource_group_name": "rg-devsecops-laravel",
            "subscription_id": "213609f3-cd71-4b46-b652-2b8c1cbee26f"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/213609f3-cd71-4b46-b652-2b8c1cbee26f/resourceGroups/rg-devsecops-laravel/providers/Microsoft.Network/networkSecurityGroups/nsg-devsecops/securityRules/AllowHTTP",
            "name": "AllowHTTP",
            "network_security_group_name": "nsg-devsecops",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "rg-devsecops-laravel",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "AllowHTTP",
            "network_security_group_name": "nsg-devsecops",
            "resource_group_name": "rg-devsecops-laravel",
            "subscription_id": "213609f3-cd71-4b46-b652-2b8c1cbee26f"
          },
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/213609f3-cd71-4b46-b652-2b8c1cbee26f/resourceGroups/rg-devsecops-laravel/providers/Microsoft.Network/networkSecurityGroups/nsg-devsecops/securityRules/AllowHTTPS",
            "name": "AllowHTTPS",
            "network_security_group_name": "nsg-devsecops",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "rg-devsecops-laravel",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "AllowHTTPS",
            "network_security_group_name": "nsg-devsecops",
            "resource_group_name": "rg-devsecops-laravel",
            "subscription_id": "213609f3-cd71-4b46-b652-2b8c1cbee26f"
          },
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/213609f3-cd71-4b46-b652-2b8c1cbee26f/resourceGroups/rg-devsecops-laravel/providers/Microsoft.Network/networkSecurityGroups/nsg-devsecops/securityRules/AllowSSH",
            "name": "AllowSSH",
            "network_security_group_name": "nsg-devsecops",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg-devsecops-laravel",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "AllowSSH",
            "network_security_group_name": "nsg-devsecops",
            "resource_group_name": "rg-devsecops-laravel",
            "subscription_id": "213609f3-cd71-4b46-b652-2b8c1cbee26f"
          },
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/213609f3-cd71-4b46-b652-2b8c1cbee26f/resourceGroups/rg-devsecops-laravel/providers/Microsoft.Network/publicIPAddresses/pip-devsecops",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.91.207.13",
            "ip_version": "IPv4",
            "location": "swedencentral",
            "name": "pip-devsecops",
            "resource_group_name": "rg-devsecops-laravel",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "pip-devsecops",
            "resource_group_name": "rg-devsecops-laravel",
            "subscription_id": "213609f3-cd71-4b46-b652-2b8c1cbee26f"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/213609f3-cd71-4b46-b652-2b8c1cbee26f/resourceGroups/rg-devsecops-laravel/providers/Microsoft.Network/virtualNetworks/vnet-devsecops/subnets/subnet-devsecops",
            "name": "subnet-devsecops",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-devsecops-laravel",
            "virtual_network_name": "vnet-devsecops"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "subnet-devsecops",
            "resource_group_name": "rg-devsecops-laravel",
            "subscription_id": "213609f3-cd71-4b46-b652-2b8c1cbee26f",
            "virtual_network_name": "vnet-devsecops"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f259df5a-1589-4b07-8c0c-b6b20d3b42d5",
            "id": "/subscriptions/213609f3-cd71-4b46-b652-2b8c1cbee26f/resourceGroups/rg-devsecops-laravel/providers/Microsoft.Network/virtualNetworks/vnet-devsecops",
            "location": "swedencentral",
            "name": "vnet-devsecops",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-devsecops-laravel",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/213609f3-cd71-4b46-b652-2b8c1cbee26f/resourceGroups/rg-devsecops-laravel/providers/Microsoft.Network/virtualNetworks/vnet-devsecops/subnets/subnet-devsecops",
                "name": "subnet-devsecops",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet-devsecops",
            "resource_group_name": "rg-devsecops-laravel",
            "subscription_id": "213609f3-cd71-4b46-b652-2b8c1cbee26f"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}